# parcial-1-aseguramiento

./: README.md  main.py  pyproject.toml
.github/workflows/: python-ci.yml
src/: LICENSE  README.md
src/calidad/: __init__.py  base.py  interfaces.py  modules.py  repository.py  service.py
tests/: test_modules.py  test_service_repo.py
