[project]
name = "calidad"
version = "0.0.1"
description = "Prototipo: clase abstracta + 2 interfaces + 2 implementaciones"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP"]

